--- a/upload.html
+++ b/upload.html
@@ -12,9 +12,9 @@
   <div class="logo">Verbun</div>
 
   <div class="nav-links">
-    <a href="h.html">Home</a>
-    <a href="h.html#feed">Feed</a>
-    <a href="h.html#team">Profile</a>
+    <a href="index.html">Home</a>
+    <a href="index.html#feed">Feed</a>
+    <a href="index.html#team">Profile</a>
   </div>
 
   <button class="hamburger" aria-label="Toggle menu" aria-expanded="false">
